menu collapse fix

--- a/sass/main-400w.scss
+++ b/sass/main-400w.scss
@@ -19,6 +19,11 @@
 
   }
   .content {
+    .hero {
+      background-size: contain;
+      min-height: 150px;
+    }
+
     .weather {
 
       .weather__today__desc {
